[tool.poetry]
name = "keycloak-client"
version = "3.0.3"
description = "Python client for Keycloak IAM"
authors = ["Akhil Lawrence <akhilputhiry@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
PyYAML = "^5.4.1"
requests = "^2.25.1"
cached-property = "^1.5.2"

[tool.poetry.dev-dependencies]
isort = "^5.9.1"
black = "^21.6b0"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
