[tool.poetry]
name = "keycloak"
version = "3.1.2"
description = "Python client for Keycloak IAM"
authors = ["Cute As Duck <pronoun_pears_0m@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
PyYAML = "^5.4.1"
cached-property = "^1.5.2"
Sphinx = {version = "^4.0.2", optional = true}
sphinx-rtd-theme = {version = "^0.5.2", optional = true}
Flask = {version = "^2.0.1", optional = true}
starlette = {version = "^0.15.0", optional = true}
Django = {version = "^3.2.4", optional = true}
uvicorn = {version = "^0.14.0", optional = true}
httpx = "^0.18.2"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]
extensions = ["Flask", "starlette", "Django", "uvicorn"]

[tool.poetry.dev-dependencies]
isort = "^5.9.1"
black = "^21.6b0"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
disallow_untypes_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*.py"
python_functions = "test_*"
addopts = "--cov=keycloak --cov-report term-missing --cov-report xml"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
