[metadata]
name = keycloak
description = Keycloak Client
keywords = keycloak, openid, uma
license = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
author = Akhil Lawrence
author_email = akhilputhiry@gmail.com

[options]
zip_safe = True
package_dir =
    =src
packages = find:
setup_requires=
    setuptools-scm==3.3.3
    pytest-runner==5.1
install_requires =
    cached-property==1.5.1
    cryptography==2.6.1
    pyjwt==1.7.1
    requests==2.21.0
    flask==1.1.1
tests_require =
    pytest==5.2.1
    pytest-cov==2.8.1

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
docs =
    sphinx==2.0.0
    sphinx_rtd_theme==0.4.3
