[metadata]
name = keycloak
description = Keycloak Client
keywords = keycloak, openid, uma
license = GPL-3.0
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
author = Akhil Lawrence
author_email = akhilputhiry@gmail.com

[options]
zip_safe = True
package_dir =
    =src
packages = find:
setup_requires=
    setuptools-scm
    pytest-runner
install_requires =
    cached-property
    cryptography
    pyjwt
    pyyaml
    requests
tests_require =
    pytest
    pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
extensions =
    flask
    uvicorn
    starlette
docs =
    sphinx
    sphinx_rtd_theme
