[metadata]
name = keycloak
description = Keycloak Client
keywords = keycloak, openid, uma
license = GPL-3.0
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
author = Akhil Lawrence
author_email = akhilputhiry@gmail.com

[options]
zip_safe = True
package_dir =
    =src
packages = find:
setup_requires=
    setuptools-scm
    pytest-runner
install_requires =
    cached-property
    cryptography
    pyjwt
    pyyaml
    requests
tests_require =
    mypy
    black
    pytest
    pytest-cov
    pytest-freezegun

[options.packages.find]
where = src
exclude =
    tests
    examples
